--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.6" encoding="UTF-8"?>
 <projectDescription>
-	<name>Trunk</name>
+	<name>L2HellKnightGeo&Pach</name>
 	<comment></comment>
 	<projects>
 	</projects>
