--- a/L2HellKnight_Server/build.xml
+++ b/L2HellKnight_Server/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="L2HellKnight_Server" default="dist" basedir=".">
+<project name="L2_HellKnight_Server" default="dist" basedir=".">
 	<description>
-		This script will build the L2HellKnight Server.
+		This script will build the L2 HellKnight Server.
 
 		This program is free software; you can redistribute it and/or modify
 		it under the terms of the GNU General Public License as published by
@@ -137,7 +137,7 @@
 		<copy todir="${build.dist}">
 			<fileset dir="dist" />
 		</copy>
-		<concat destfile="${build.dist.doc}/L2HellKnight_Server_CHANGELOG.txt">${l2j.changelog}</concat>
+		<concat destfile="${build.dist.doc}/hellknight_Server_CHANGELOG.txt">${l2j.changelog}</concat>
 		<copy todir="${build.dist.game}">
 			<fileset dir="misc" />
 		</copy>
@@ -151,7 +151,7 @@
 		<fixcrlf srcdir="${build.dist.game}" eol="lf" eof="remove" includes="**/*.sh" />
 		<fixcrlf srcdir="${build.dist.login}" eol="crlf" eof="remove" includes="**/*.bat" />
 		<fixcrlf srcdir="${build.dist.login}" eol="lf" eof="remove" includes="**/*.sh" />
-		<zip destfile="${build}/L2HellKnight_Server.zip" basedir="${build.dist}" />
+		<zip destfile="${build}/L2_hellknight_Server.zip" basedir="${build.dist}" />
 	</target>
 
 	<target name="clean" description="Remove the output directories">
