--- a/L2HellKnight_Community/.project
+++ b/L2HellKnight_Community/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>L2HellKnight_CommunityServer</name>
+	<name>L2J_CommunityServer</name>
 	<comment></comment>
 	<projects>
 	</projects>
