--- a/L2HellKnight_Compilator/lib/c3p0/build.xml
+++ b/L2HellKnight_Compilator/lib/c3p0/build.xml
@@ -73,14 +73,14 @@
 				<exclude name="**/gsregistering/**"/>
 			</fileset>
 		</jar>
-		<jar destfile="${build}/L2HellKnight_Login.jar">
+		<jar destfile="${build}/L2HellKnightlogin.jar">
 			<fileset dir="${build.classes}" >
 				<exclude name="**/gameserver/**"/>
 			</fileset>
 		</jar>
 		<copy todir="${build.dist.login}">
 			<fileset dir="${build}">
-				<include name="L2HellKnight_Login.jar" />
+				<include name="L2HellKnightlogin.jar" />
 			</fileset>
 		</copy>
 		<copy todir="${build.dist.game}">
