--- a/L2_HellKnight_HighFive/.project
+++ b/L2_HellKnight_HighFive/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>l2-arcadia</name>
+	<name>L2HellKnight</name>
 	<comment></comment>
 	<projects>
 	</projects>
