--- a/L2_HellKnight_HighFive/Datapack/build.xml
+++ b/L2_HellKnight_HighFive/Datapack/build.xml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<project name="L2_HellKnight_DP" default="build" basedir=".">
+<project name="L2_HellKnight_DataPack" default="build" basedir=".">
 	<description>
 		This script will build the L2J DataPack.
 
